--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <script src="javaScript.js" defer></script>
-    <title>Etch-a-Sketch</title>
+    <title>Etch-a-sketch</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Etch-a-sketch</h1>
+    </header>
+
+    <main>
+        <div class="grid"></div>
+        <div class="buttons"></div>
+    </main>
 </body>
+
 </html>
